--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     
     <!-- App Scripts -->
     <script src="js/config.js"></script>
-    <script src="js/router.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/services/offers.js"></script>
+    <script src="js/services/applications.js"></script>
+    <script src="js/router.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
