Fix student onboarding button and recruiter dashboard timing

--- a/html/onboarding.html
+++ b/html/onboarding.html
@@ -80,7 +80,7 @@
 
                     <div id="formError" class="alert alert-danger" style="display: none;"></div>
 
-                    <button type="submit" class="btn-primary" style="width: 100%; margin-top: 1rem;">Complete Profile</button>
+                    <button type="button" onclick="submitProfile(event)" class="btn-primary" style="width: 100%; margin-top: 1rem;">Complete Profile</button>
                 </form>
             </div>
         </div>
