--- a/html/landing.html
+++ b/html/landing.html
@@ -1,12 +1,12 @@
 <header>
     <div class="container">
         <nav>
-            <div class="logo">BAIT</div>
+            <div class="logo" style="cursor:pointer" onclick="window.location.hash='/'">BAIT</div>
             <ul class="nav-links">
-                <li><a href="#" onclick="router.navigate('/')">Home</a></li>
+                <li><a href="#/">Home</a></li>
             </ul>
             <div class="nav-right">
-                <button class="btn-primary" onclick="router.navigate('/login')">Sign In</button>
+                <button class="btn-primary" onclick="window.location.hash='/login'">Sign In</button>
             </div>
         </nav>
     </div>
@@ -20,8 +20,8 @@
                 Connect talented students with amazing internship opportunities
             </p>
             <div style="display: flex; gap: 1rem; justify-content: center;">
-                <button class="btn-primary btn-large" onclick="router.navigate('/signup')">Get Started</button>
-                <button class="btn-secondary btn-large" onclick="router.navigate('/login')">Sign In</button>
+                <button class="btn-primary btn-large" onclick="window.location.hash='/signup'">Get Started</button>
+                <button class="btn-secondary btn-large" onclick="window.location.hash='/login'">Sign In</button>
             </div>
         </section>
 
