--- a/html/recruiter-applicants.html
+++ b/html/recruiter-applicants.html
@@ -4,8 +4,8 @@
             <div class="logo">BAIT</div>
             <div style="flex: 1; margin-left: 3rem;">
                 <ul class="nav-links">
-                    <li><a href="#" onclick="router.navigate('/recruiter/dashboard')">Dashboard</a></li>
-                    <li><a href="#" onclick="router.navigate('/recruiter/offers')">My Offers</a></li>
+                    <li><a href="#/recruiter/dashboard">Dashboard</a></li>
+                    <li><a href="#/recruiter/offers">My Offers</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -17,7 +17,7 @@
 
 <main>
     <div class="container" style="max-width: 1200px; padding: 2rem 1rem;">
-        <button class="btn-secondary" onclick="router.navigate('/recruiter/dashboard')">← Back to Dashboard</button>
+        <button class="btn-secondary" onclick="window.location.hash='/recruiter/dashboard'">← Back to Dashboard</button>
 
         <div style="margin-top: 2rem;">
             <div id="offerHeader" style="background: white; padding: 1.5rem; border-radius: 0.75rem; margin-bottom: 2rem; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
