--- a/html/student-applications.html
+++ b/html/student-applications.html
@@ -4,9 +4,9 @@
             <div class="logo">BAIT</div>
             <div style="flex: 1; margin-left: 3rem;">
                 <ul class="nav-links">
-                    <li><a href="#" onclick="router.navigate('/student/dashboard')">Home</a></li>
-                    <li><a href="#" onclick="router.navigate('/student/applications')">My Applications</a></li>
-                    <li><a href="#" onclick="router.navigate('/student/profile')">Profile</a></li>
+                    <li><a href="#/student/dashboard">Home</a></li>
+                    <li><a href="#/student/applications">My Applications</a></li>
+                    <li><a href="#/student/profile">Profile</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -28,7 +28,7 @@
 
             <div id="noApplications" class="text-center" style="padding: 2rem; display: none;">
                 <p>You haven't applied to any offers yet.</p>
-                <button class="btn-primary" onclick="router.navigate('/student/dashboard')">Browse Offers</button>
+                <button class="btn-primary" onclick="window.location.hash='/student/dashboard'">Browse Offers</button>
             </div>
         </div>
     </div>
