--- a/html/landing.html
+++ b/html/landing.html
@@ -6,7 +6,7 @@
                 <li><a href="#/">Home</a></li>
             </ul>
             <div class="nav-right">
-                <button class="btn-primary" onclick="window.location.hash='/login'">Sign In</button>
+                <a href="#/login" class="btn-primary">Sign In</a>
             </div>
         </nav>
     </div>
@@ -20,8 +20,8 @@
                 Connect talented students with amazing internship opportunities
             </p>
             <div style="display: flex; gap: 1rem; justify-content: center;">
-                <button class="btn-primary btn-large" onclick="window.location.hash='/signup'">Get Started</button>
-                <button class="btn-secondary btn-large" onclick="window.location.hash='/login'">Sign In</button>
+                <a href="#/signup" class="btn-primary btn-large">Get Started</a>
+                <a href="#/login" class="btn-secondary btn-large">Sign In</a>
             </div>
         </section>
 
