--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
         <nav>
             <div class="logo" style="cursor:pointer" onclick="window.location.hash='/'">BAIT</div>
             <div class="nav-right">
-                <a href="#/" onclick="event.preventDefault(); window.location.hash='/'">Home</a>
+                <a href="#/">Home</a>
             </div>
         </nav>
     </div>
@@ -34,7 +34,7 @@
             </form>
 
             <p style="text-align: center; margin-top: 2rem;">
-                Don't have an account? <a href="#/signup" onclick="event.preventDefault(); window.location.hash='/signup'">Sign Up</a>
+                Don't have an account? <a href="#/signup">Sign Up</a>
             </p>
         </div>
     </div>
