Complete rewrite: fix navigation, add AI fit scores, sample data generation

--- a/html/recruiter-dashboard.html
+++ b/html/recruiter-dashboard.html
@@ -39,7 +39,7 @@
             <div style="margin: 2rem 0; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
                 <h2 style="margin: 0;">Your Offers</h2>
                 <div style="display: flex; gap: 0.5rem;">
-                    <button class="btn-secondary" onclick="generateSampleOffers()">🎲 Add Sample Offers</button>
+                    <button class="btn-secondary" onclick="generateRecruiterOffers()">🎲 Add Sample Offers</button>
                     <button class="btn-primary" onclick="window.location.hash='/recruiter/offer/new'">+ Create New Offer</button>
                 </div>
             </div>
