--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <title>BAIT - Internship Hiring Platform</title>
     <link rel="stylesheet" href="styles/main.css">
     
-    <!-- Firebase SDK v9+ compat -->
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-storage-compat.js"></script>
 </head>
 <body>
-    <div id="root">Loading BAIT...</div>
+    <div id="root">
+        <div style="display:flex;justify-content:center;align-items:center;height:100vh;">
+            <p>Loading BAIT...</p>
+        </div>
+    </div>
     
-    <!-- App Scripts -->
+    <!-- Core Scripts -->
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
-    <script src="js/services/offers.js"></script>
-    <script src="js/services/applications.js"></script>
     <script src="js/router.js"></script>
-    <script src="js/app.js"></script>
 </body>
 </html>
