--- a/html/student-profile.html
+++ b/html/student-profile.html
@@ -1,16 +1,17 @@
 <header>
     <div class="container">
         <nav class="flex-between">
-            <div class="logo">BAIT</div>
+            <a href="#/login" class="logo" style="text-decoration:none;color:inherit;cursor:pointer;">BAIT</a>
             <div style="flex: 1; margin-left: 3rem;">
                 <ul class="nav-links">
                     <li><a href="#/student/dashboard">Home</a></li>
                     <li><a href="#/student/applications">My Applications</a></li>
+                    <li><a href="#/student/results">Results</a></li>
                     <li><a href="#/student/profile">Profile</a></li>
                 </ul>
             </div>
             <div class="nav-right">
-                <button class="btn-secondary btn-small" onclick="handleLogout()">Sign Out</button>
+                <button class="btn-secondary btn-small" onclick="window.handleLogout()">Sign Out</button>
             </div>
         </nav>
     </div>
