Auto-load profile from onboarding, expand to 20 global internships, fix company links

--- a/html/student-applications.html
+++ b/html/student-applications.html
@@ -6,6 +6,7 @@
                 <ul class="nav-links">
                     <li><a href="#/student/dashboard">Home</a></li>
                     <li><a href="#/student/applications">My Applications</a></li>
+                    <li><a href="#/student/messages">Messages</a></li>
                     <li><a href="#/student/results">Results</a></li>
                     <li><a href="#/student/profile">Profile</a></li>
                 </ul>
